--- a/css/shop-item.css
+++ b/css/shop-item.css
@@ -1,66 +1,66 @@
-/* line 4, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 4,  */
 body {
   position: relative; }
 
-/* line 8, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 8,  */
 .thumbnail img {
   width: 100%; }
 
-/* line 12, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 12,  */
 .ratings {
   padding-right: 10px;
   padding-left: 10px;
   color: #d17581; }
 
-/* line 18, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 18,  */
 .thumbnail {
   padding: 0; }
 
-/* line 22, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 22,  */
 .thumbnail .caption-full {
   padding: 9px;
   color: #333; }
 
-/* line 27, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 27,  */
 footer {
   margin: 50px 0; }
 
-/* line 31, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 31,  */
 .test {
   height: 100px; }
 
-/* line 36, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 36,  */
 .group {
   padding-top: 50px;
   padding-bottom: 0px; }
 
-/* line 40, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 40,  */
 .subgroup {
   padding-top: 50px;
   padding-bottom: 0px; }
 
-/* line 45, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 45,  */
 .bottom-buffer {
   padding-bottom: 50px; }
 
-/* line 49, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 49,  */
 #sidebar {
   padding-top: 70px;
   padding-bottom: 70px; }
 
-/* line 55, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 55,  */
 .fixed {
   position: fixed; }
 
 /* sidebar */
-/* line 60, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 60,  */
 .bs-docs-sidebar {
   padding-left: 20px;
   margin-top: 20px;
   margin-bottom: 20px; }
 
 /* all links */
-/* line 67, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 67,  */
 .bs-docs-sidebar .nav > li > a {
   color: #999;
   border-left: 2px solid transparent;
@@ -69,7 +69,7 @@ footer {
   font-weight: 400; }
 
 /* nested links */
-/* line 76, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 76,  */
 .bs-docs-sidebar .nav .nav > li > a {
   padding-top: 1px;
   padding-bottom: 1px;
@@ -77,7 +77,7 @@ footer {
   font-size: 12px; }
 
 /* active & hover links */
-/* line 86, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 86,  */
 .bs-docs-sidebar .nav > .active > a,
 .bs-docs-sidebar .nav > li > a:hover,
 .bs-docs-sidebar .nav > li > a:focus {
@@ -87,43 +87,43 @@ footer {
   border-left-color: #563d7c; }
 
 /* all active links */
-/* line 95, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 95,  */
 .bs-docs-sidebar .nav > .active > a,
 .bs-docs-sidebar .nav > .active:hover > a,
 .bs-docs-sidebar .nav > .active:focus > a {
   font-weight: 700; }
 
 /* nested active links */
-/* line 101, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 101,  */
 .bs-docs-sidebar .nav .nav > .active > a,
 .bs-docs-sidebar .nav .nav > .active:hover > a,
 .bs-docs-sidebar .nav .nav > .active:focus > a {
   font-weight: 500; }
 
 /* hide inactive nested list */
-/* line 106, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 106,  */
 .bs-docs-sidebar .nav ul.nav {
   display: none; }
 
 /* show active nested list */
-/* line 110, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 110,  */
 .bs-docs-sidebar .nav > .active > ul.nav {
   display: block; }
 
-/* line 114, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 114,  */
 #solverTable td {
   text-align: center; }
 
-/* line 118, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 118,  */
 #solverTable th {
   text-align: center; }
 
-/* line 122, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 122,  */
 #barIcon {
   color: white; }
 
 /* IMAGE STYLE - SVGUIDE */
-/* line 127, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 127,  */
 img.svImg {
   display: block;
   margin-left: auto;
@@ -133,7 +133,7 @@ img.svImg {
 }
 
 /* CAPTION STYLE - SVGUIDE */
-/* line 136, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 136,  */
 figcaption.svCaption {
   text-align: center;
   /* font-family: times; */
@@ -143,41 +143,41 @@ figcaption.svCaption {
   margin-bottom: 20px; }
 
 /* IMAGE SIZE */
-/* line 146, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 146,  */
 img.svImgXs {
   max-height: 300px;
   width: 100%;
   object-fit: contain; 
 }
 
-/* line 149, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 149,  */
 img.svImgSm {
   max-height: 400px;
   width: 100%;
   object-fit: contain; 
 }
 
-/* line 152, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 152,  */
 img.svImgMd {
   max-height: 600px;
   width: 100%;
   object-fit: contain; 
 }
 
-/* line 155, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 155,  */
 img.svImgLg {
   max-height: 800px;
   width: 100%;
   object-fit: contain; 
 }
 
-/* line 158, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 158,  */
 img.svImgXl {
   width: 100%; 
 }
 
 /* SCROLL PROPERTY FOR DOCS AND CLINICAL CASES*/
-/* line 163, /home/dave/software/ktbolt/simvascular.github.io/source/css/shop-item.css.scss */
+/* line 163,  */
 .bs-docs-sidebar > ul {
   overflow-y: auto;
   height: 100%; 
