--- a/css/documentation.css
+++ b/css/documentation.css
@@ -28,7 +28,7 @@ html, body {
 ---------------------------------------------*/
 
 html { 
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
     scroll-padding-top: 90px;
  }
 
